<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:padding="32dp"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        tools:context=".MainActivity"
        android:background="@color/colorPrimary">

    <TextView
            style="@style/HeaderText"
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"/>

    <View android:layout_width="0dp" android:layout_height="0dp"
          android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="72dp">

        <Button
                style="@style/ButtonStyle"
                android:id="@+id/resume_button"
                android:onClick="openPCScreen"
                android:text="@string/resume"
                android:visibility="gone"/>

        <Button
                style="@style/ButtonStyle"
                android:id="@+id/start_button"
                android:onClick="startQuestions"
                android:text="@string/start"/>

    </LinearLayout>

</LinearLayout>