<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="32dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:gravity="center_horizontal"
        tools:context=".QuestionActivity">

    <LinearLayout
            android:id="@+id/root"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                style="@style/HeaderText"
                android:paddingBottom="40dp"
                android:id="@+id/question_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:textColor="#CCCCCC"
                android:visibility="gone"
                android:padding="8dp"
                android:fontFamily="sans-serif-light"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/as_many_tv"
                android:text="@string/choose_many"/>

        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:max="100"
                android:progress="50"
                android:id="@+id/price_seek_bar"/>

        <LinearLayout
                android:id="@+id/prices_layout"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textColor="#CCCCCC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$450"/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            <TextView
                    android:textSize="16sp"
                    android:id="@+id/price_tv"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$1000"/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            <TextView
                    android:textColor="#CCCCCC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$1500"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/answer_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <LinearLayout
                android:gravity="center"
                android:padding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/back_step_button"
                    android:onClick="onBackButton"
                    android:text="@string/back"/>
            <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/next_step_button"
                    android:onClick="onNextButton"
                    android:text="@string/next"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>